[package]
name = "spaceframe-consensus"
version = "0.1.0"
authors = ["Gil Balsiger <gil.balsiger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
blake3 = "0.3.8"
log = "0.4.14"
simplelog = "0.10.0"
hex = "0.4.3"

[dev-dependencies]