[package]
name = "spaceframe-crypto"
version = "0.1.0"
authors = ["Gil Balsiger <gil.balsiger@heig-vd.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "0.3.8"
chacha20 = "0.7.1"
ed25519-dalek = "1.0.1"
serde = { version="1", features = ["derive"] }
bincode = "1.3.3"