[package]
name = "spaceframe-grpc"
version = "0.1.0"
authors = ["Gil Balsiger <gil.balsiger@heig-vd.ch>"]
edition = "2018"

[[bin]]
name = "spaceframe-server"
path = "src/server.rs"

[[bin]]
name = "spaceframe-client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8.0", features = ["full"] }
tonic = "0.4.3"
prost = "0.7.0"

[build-dependencies]
tonic-build = "0.4.2"