[package]
name = "spaceframe-ledger"
version = "0.1.0"
authors = ["Gil Balsiger <gil.balsiger@heig-vd.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
borsh = "0.9.1"
chrono = "0.4.19"
strum = { version = "0.21.0", features = ["derive"] }
bs58 = "0.4.0"
rand = "0.7"
thiserror = "1.0"
anyhow = "1.0"
spaceframe-crypto = { path="../crypto" }
spaceframe-merkletree = { path = "../merkletree" }