[package]
name = "spaceframe-node"
version = "0.1.0"
authors = ["Gil Balsiger <gil.balsiger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
rand = "0.8.3"
base64 = "0.13.0"

spaceframe-pospace = { path = "../pospace" }