[package]
name = "spaceframe-node"
version = "0.1.0"
authors = ["Gil Balsiger <gil.balsiger@heig-vd.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
rand = "0.8.3"
base64 = "0.13.0"
log = "0.4.14"
simplelog = "0.10.0"
anyhow = "1.0.42"
dialoguer = "0.8.0"
console = "0.14.1"
hex = "0.4.3"

spaceframe-pospace = { path = "../pospace" }
spaceframe-ledger = { path = "../ledger" }
spaceframe-storage = { path = "../storage" }
spaceframe-crypto = { path = "../crypto" }