[package]
name = "spaceframe-pospace"
version = "0.1.0"
authors = ["Gil Balsiger <gil.balsiger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "0.3.7"
chacha20 = "0.7.1"
bitvec = "0.22.1"
rstest = "0.10.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand = "0.8.3"

[[bench]]
name = "my_benchmark"
harness = false
