[package]
name = "spaceframe-pospace"
version = "0.1.0"
authors = ["Gil Balsiger <gil.balsiger@heig-vd.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "0.3.7"
chacha20 = "0.7.1"
bitvec = "0.22.1"
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
crossbeam-channel = "0.5.1"
log = "0.4.14"
sysinfo = "0.19.2"
lazy_static = "1.4.0"
thiserror = "1.0.26"
anyhow = "1.0.42"
borsh = "0.9.1"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand = "0.8.3"
tempdir = "0.3.7"
simplelog = "0.10.0"

[[bench]]
name = "my_benchmark"
harness = false
