[package]
name = "spaceframe-storage"
version = "0.1.0"
authors = ["Gil Balsiger <gil.balsiger@heig-vd.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spaceframe-ledger = { path="../ledger" }
borsh = "0.9.1"
prost = "0.8"
prost-types = "0.8"

[build-dependencies]
prost-build = "0.8"