[package]
name = "spaceframe-storage"
version = "0.1.0"
authors = ["Gil Balsiger <gil.balsiger@heig-vd.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spaceframe-ledger = { path="../ledger" }
anyhow = "1"
thiserror ="1"
borsh = "0.9.1"

[dev-dependencies]
tempdir = "0.3.7"
spaceframe-crypto = { path = "../crypto" }